Fix align item in chrome

--- a/css/index.css
+++ b/css/index.css
@@ -103,7 +103,8 @@ i {
 
 #fileToUpload{
   margin:auto;
-	width:90%;
+  padding-left: 30%;
+  padding-right: 30%;
   display: block;
   border-radius:20px;
   border: 3px dashed #555;
